[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/world/player/tank.gd" type="Script" id=1]
[ext_resource path="res://src/world/player/tankName.gd" type="Script" id=2]
[ext_resource path="res://src/world/player/barrelPivot.gd" type="Script" id=3]
[ext_resource path="res://src/world/player/cameraCaster.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/world/player/barrel.gd" type="Script" id=5]
[ext_resource path="res://src/world/player/muzzle_smoke_shader.tres" type="Material" id=6]
[ext_resource path="res://src/world/player/muzzle_smoke.tres" type="Material" id=7]
[ext_resource path="res://src/world/player/muzzle_shader.tres" type="Material" id=8]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="CylinderMesh" id=4]

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, -1.31484, 0, 0, Vector2( 1, 0 ), -0.0315915, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_align_y = true
direction = Vector3( 0, 1, 0 )
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.5
linear_accel = -50.0
radial_accel = 100.0
tangential_accel = 83.22
tangential_accel_random = 1.0
damping = 46.98
angle = -720.0
scale = 5.0
scale_random = 0.5
scale_curve = SubResource( 6 )

[sub_resource type="QuadMesh" id=8]
material = ExtResource( 8 )

[sub_resource type="QuadMesh" id=9]
material = ExtResource( 6 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 1, 1, 2 )

[node name="Player" type="KinematicBody" groups=[
"damageable",
]]
script = ExtResource( 1 )

[node name="cameraTarget" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.807939, 0.589267, 0, -0.589267, 0.807939, 0, 2.84321, 0 )

[node name="Camera" parent="cameraTarget" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, -5.96046e-08, 0, 5.96046e-08, 1, 2.21145, -3.57628e-06, 38.5601 )
current = false
fov = 74.2
size = 99.7

[node name="body" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="body"]
transform = Transform( 0.303926, 0, 0, 0, 0.558775, 0, 0, 0, 1.95088, 0.798851, -0.407052, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="body"]
transform = Transform( 0.303926, 0, 0, 0, 0.558775, 0, 0, 0, 1.95088, -0.924343, -0.407052, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="carosserie" type="MeshInstance" parent="body"]
transform = Transform( 0.739766, 0, 0, 0, -2.58323e-08, 0.590973, 0, -1.42062, -6.20974e-08, 0, 0.28902, 0.376734 )
mesh = SubResource( 3 )
material/0 = null

[node name="textPos" type="Spatial" parent="body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.39463, 2.28701 )

[node name="Control" type="Control" parent="body/textPos"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerName" type="Label" parent="body/textPos/Control"]
margin_left = -25.2269
margin_right = 24.7731
margin_bottom = 14.0
text = "zoubida"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="barrelPivot" type="Spatial" parent="body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23269, 0.930767 )
script = ExtResource( 3 )

[node name="barrel" type="MeshInstance" parent="body/barrelPivot"]
transform = Transform( 0.310965, 0, 0, 0, -1.35927e-08, 0.310965, 0, -2.24841, -9.82809e-08, 0, 0.0457025, -1.28911 )
mesh = SubResource( 4 )
material/0 = null
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="body/barrelPivot/barrel"]
wait_time = 0.1

[node name="BulletSpawner" type="Spatial" parent="body/barrelPivot/barrel"]
transform = Transform( 1, 0, 0, 0, 1, -7.10543e-15, 0, 0, 1, 0, 1.35878, 0 )

[node name="closeMf" type="OmniLight" parent="body/barrelPivot/barrel"]
transform = Transform( 3.2158, 0, 0, 0, -1.40567e-07, -0.444759, 0, 3.2158, -1.94417e-08, 0, 1.302, 0 )
light_color = Color( 1, 0.968627, 0.858824, 1 )
light_energy = 0.0
omni_range = 4.69803

[node name="farMf" type="SpotLight" parent="body/barrelPivot/barrel"]
transform = Transform( 3.2158, 0, 0, 0, -1.40567e-07, -0.444759, 0, 3.2158, -1.94417e-08, 0, 1.302, 0 )
light_color = Color( 1, 0.803922, 0.341176, 1 )
light_energy = 0.0
shadow_enabled = true
spot_range = 19.9208
spot_angle = 72.273

[node name="Tween" type="Tween" parent="body/barrelPivot/barrel"]

[node name="muzzleFire0" type="Particles" parent="body/barrelPivot/barrel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 7.10543e-15, 1, 3.06682e-06, 1.04891, 0.196151 )
emitting = false
amount = 50
lifetime = 0.3
one_shot = true
explosiveness = 1.0
fixed_fps = 24
visibility_aabb = AABB( -4, -0.723593, -4, 8, 0.94621, 8 )
local_coords = false
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 8 )

[node name="muzzleSmoke0" type="Particles" parent="body/barrelPivot/barrel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 7.10543e-15, 1, 0, 1.41071, -3.7287 )
emitting = false
amount = 50
one_shot = true
explosiveness = 0.67
randomness = 0.45
fixed_fps = 24
visibility_aabb = AABB( -4, -0.383571, -4, 8, 1.57574, 8 )
local_coords = false
process_material = ExtResource( 7 )
draw_pass_1 = SubResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 10 )
[connection signal="timeout" from="body/barrelPivot/barrel/Timer" to="body/barrelPivot/barrel" method="_on_Timer_timeout"]
